--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Removed duplicate viewport meta tag here -->
     <a href="#" class="logo">AVENZO.morocco</a>
     <button class="nav-toggle" aria-label="Toggle navigation">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -24,7 +24,6 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
-
   <section class="hero">
     <div class="hero-logo-container">
       <img src="c:\Users\hp\Downloads\logo1-removebg-preview.png" alt="AVENZO Morocco Logo" class="hero-logo">
