--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
   <section class="hero">
     <div class="hero-logo-container">
-      <img src="c:\Users\hp\Downloads\logo1-removebg-preview.png" alt="AVENZO Morocco Logo" class="hero-logo">
+      <img src="logo.png.png" alt="AVENZO Morocco Logo" class="hero-logo">
     </div>
     <h1>Welcome to AVENZO Morocco</h1>
     <p>We bring you innovation and quality with every product.</p>
@@ -49,12 +49,12 @@
     <p>Our product category focuses on fun robotics that combine entertainment, learning, and innovative technology in one experience.</p>
     <div class="product-cards">
       <div class="product-card">
-        <img src="c:\Users\hp\Desktop\erik.png" alt="Fun" class="product-image">
+        <img src="erik.png" alt="Fun" class="product-image">
         <h2>ERIK</h2>
         <p>ERIK is an emotional robot designed to understand and respond to its surroundings, creating natural and empathetic interactions with people.</p>
       </div>
       <div class="product-card">
-        <img src="c:\Users\hp\Downloads\WhatsApp_Image_2025-05-19_at_17.10.29_216b1a70-removebg-preview (1).png" alt="robot" class="product-image">
+        <img src="alice.png" alt="robot" class="product-image">
         <h2>ALICE</h2>
         <p>$</p>
       </div>
