--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p>$</p>
       </div>
       <div class="product-card">
-        <img src="c:\Users\hp\Downloads\BMO_in_3D_Realism__2_-removebg-preview.png" alt="robot" class="product-image">
+        <img src="bimo.png" alt="robot" class="product-image">
         <h2>BMO</h2>
         <p>Track your fitness and stay connected with our stylish smartwatches.</p>
       </div>
