--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="about-content">
       <div class="about-company">
         <h3>Our Company</h3>
-        <p>AVENZO.morocco is a dynamic company founded in 2025 by Bilal ED-Daoudi, Ismail Ntayeba, and Anas Tata. It offers a wide range of products and services across multiple industries, focusing on quality, innovation, and customer satisfaction. With a fresh vision and strong leadership, AVENZO.morocco aims to grow as a trusted name in the Moroccan and global market.</p>
+        <p>AVENZO.morocco is a dynamic company founded in 2025. It offers a wide range of products and services across multiple industries, focusing on quality, innovation, and customer satisfaction. With a fresh vision and strong leadership, AVENZO.morocco aims to grow as a trusted name in the Moroccan and global market.</p>
       </div>
     
     </div>
@@ -56,18 +56,18 @@
       <div class="product-card">
         <img src="alice.png" alt="robot" class="product-image">
         <h2>ALICE</h2>
-        <p>$</p>
+        <p>ALICE is an emotional robot designed to understand and respond to her surroundings, creating natural and empathetic interactions with people. She is the feminine version of the original concept, developed to enhance emotional intelligence and social connection.</p>
       </div>
       <div class="product-card">
         <img src="bimo.png" alt="robot" class="product-image">
         <h2>BMO</h2>
-        <p>Track your fitness and stay connected with our stylish smartwatches.</p>
+        <p>BMO is an emotional robot that recognizes faces and voice tones, responding with friendly gestures and speech. Designed for natural and empathetic interaction, BMO supports communication and emotional connection.</p>
       </div>
   </section>
 
   <section id="contact" class="contact-section">
     <h2>Contact Us</h2>
-    <p>We would love to hear from you! Please fill out the form below, and we’ll get back to you as soon as possible.</p>
+    <p>Hy, I'm Ed-daoudi Bilal the CEO of AVENZO-morocco, I would love to hear from you your Feedback! Please fill out the form below, and we’ll get back to you as soon as possible.</p>
     <form class="contact-form">
       <div class="form-group">
         <label for="name">Your Name</label>
