--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <section id="contact" class="contact-section">
     <h2>Contact Us</h2>
-    <p>Hy, I'm Ed-daoudi Bilal the CEO of AVENZO-morocco, I would love to hear from you your Feedback! Please fill out the form below, and we’ll get back to you as soon as possible.</p>
+    <p>Hy, I'm Ed-daoudi Bilal and i would like to hear from you your Feedback! Please fill out the form below, and we’ll get back to you as soon as possible.</p>
     <form class="contact-form">
       <div class="form-group">
         <label for="name">Your Name</label>
